# ai-agent

./: config.py  main.py  pyproject.toml  tests.py
calculator/: tests.py
calculator/pkg/: calculator.py
functions/: call_function.py  get_file_content.py  get_files_info.py  run_python.py  write_file.py
